Fixed boostack hero font size on mobile

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -294,7 +294,8 @@ footer
     background-color: #0d2456 \9
 
 @media screen and (max-width: 568px)
-  section.disclaimer h1
+  section.disclaimer h2
+    margin-bottom: 1em
     padding: 10px
     font-size: 2.8em
     line-height: 50px
@@ -309,5 +310,6 @@ footer
       padding-right: 10px
       &:first-child
         padding-left: 0px
+
 
 @import "_cookie"
